biocomplexity/templates/websearch-dev/namespace.yaml
# websearch/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: websearch-dev
