biocomplexity/templates/websearch-dev/crawler-deploy.yaml
# websearch/base/crawler-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
spec:
  replicas: 1
  selector:
    matchLabels: {app: crawler}
  template:
    metadata:
      labels: {app: crawler}
    spec:
      containers:
        - name: crawler
          image: laituanmanh/websearch-crawler:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "2024Mi"
              cpu: "50m"
            limits:
              memory: "3024Mi"
              cpu: "100m"

          volumeMounts:
            - {name: crawler-storage, mountPath: /app/storage}
      volumes:
        - name: crawler-storage
          persistentVolumeClaim: {claimName: crawler-storage}
