biocomplexity/templates/websearch-dev/flaresolverr-deploy.yaml
# websearch/base/flaresolverr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels: {app: flaresolverr}
  template:
    metadata:
      labels: {app: flaresolverr}
    spec:
      containers:
        - name: flaresolverr
          image: 21hsmw/flaresolverr:nodriver
          ports:
            - containerPort: 8191
          resources:
            requests:
              memory: "2024Mi"
              cpu: "50m"
            limits:
              memory: "3024Mi"
              cpu: "100m"
