biocomplexity/templates/websearch-dev/crawler-svc.yaml
# websearch/base/crawler-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler
spec:
  type: ClusterIP                  # change to LoadBalancer / NodePort if required
  selector: {app: crawler}
  ports:
    - name: http
      port: 3001
      targetPort: 3001
