biocomplexity/templates/websearch-dev/falresolverr-svc.yaml
# websearch/base/flaresolverr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  type: ClusterIP
  selector: {app: flaresolverr}
  ports:
    - name: http
      port: 8191
      targetPort: 8191
