biocomplexity/templates/websearch-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: stormshare-dev-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
  - host: websearch-dev.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crawler
            port:
              number: 3001
